--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mantine/form": "^7.17.0",
     "@mantine/hooks": "^7.17.0",
     "@mantine/tiptap": "^7.17.0",
+    "@tanstack/react-query": "^5.67.2",
     "@tiptap/core": "^2.11.5",
     "@tiptap/extension-link": "^2.11.5",
     "@tiptap/extension-text-align": "^2.11.5",
@@ -26,7 +27,9 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-konva": "^19.0.3",
-    "use-image": "^1.1.1"
+    "use-image": "^1.1.1",
+    "uuid": "^11.1.0",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
